BUG#9657  mysqldump xml ( -x ) does not format NULL fields correctly  - Importing the bug fixes by patch due to merge problems.

client/mysqldump.c:
  Import patch patch
mysql-test/r/mysqldump.result:
  Import patch patch
mysql-test/t/mysqldump.test:
  Import patch patch